2011-07-26  Simson Garfinkel  <simsong@t.nitroba.org>

	* src/main.cpp (main): main is now a method of state.

2011-07-22  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/hash.cpp (display::hash_stdin): removed is_stdin because we can just compare handle to stdin.

	* src/dig.cpp (have_processed_dir): cycle system no longer public; now it's static. (should there be a dig class?)

2011-07-21  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/files.cpp (shift_string): moved to files.cpp, the only place where it is used.

	* src/main.cpp (check_wow64): moved to main.cpp

	* src/files.cpp (find_comma_separated_string): moved from helpers.cpp to files.cpp and made static.

	* src/main.cpp (state::md5deep_process_command_line): -f option removed sincei t was not properly implemented and doesnt appear to have been used.

2011-07-21  Simson Garfinkel  <simsong@cmu-466621.wv.cc.cmu.edu>

	* src/Makefile.am: removed md5deep.h and md5deep_match.h

2011-07-20  Simson Garfinkel  <simsong@cmu-466621.wv.cc.cmu.edu>

	* src/main.cpp (state::md5deep_process_command_line): removed mode_piecewise, since it can be determined from picewise_size>0.

	* src/main.h (class state): moved primary_function into display

2011-07-19  Simson Garfinkel  <simsong@184.sub-75-243-240.myvzw.com>

	* src/main.h (enum): added status_EXIT_FAILURE to status_t as status_t is now returned.

2011-07-19  Simson Garfinkel  <simsong@imac3.home>

	* src/display.cpp: the only place that filename shortening was done was in display_realtime_stats, so all of the filename shortening logic was moved there and it was moved out of display_filename everywhere else. The passage of the FILE * to display to was put back in, becuase display_filename was also being used to display error messages.

2011-07-18  Simson Garfinkel  <simsong@imac3.home>

	* src/main.h (mode_which): changed mode_which to opt_show_matched (which is the default)

2011-07-18  Simson Garfinkel  <simsong@mncrnpsedu.local>
